--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ aws.secret_access_key=
 s3.bucket=abrito10-curso-spring-ionic
 s3.region=sa-east-1
 
-img.prefix.client.profile=cp_
+img.prefix.client.profile=cp
 img.profile.size=200
